--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.14.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -56,7 +57,7 @@
   },
   "lint-staged": {
     "*.{js, jsx}": [
-      "npm run lint",
+      "npm run lint:fix",
       "git add ."
     ]
   }
