--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rainmanxn.github.io/timer18",
+  "homepage": "http://rainmanxn.github.io/avia19",
   "name": "avia19",
   "version": "0.1.0",
   "private": true,
